--- a/_layout/_stylus/album.styl
+++ b/_layout/_stylus/album.styl
@@ -2,6 +2,7 @@
   width: 70%
   margin: 96px auto
   text-align: left
+  padding: 0px
   section
     padding-bottom: 48px
     border-bottom: 1px solid #eee
