--- a/_layout/_stylus/base.styl
+++ b/_layout/_stylus/base.styl
@@ -29,6 +29,24 @@ body
     width: 60%;
     max-width: 700px;
 
+::-webkit-scrollbar
+  width: 5px
+  height: 2px
+  z-index: 1000
+
+::-webkit-scrollbar-corner
+  background: transparent
+
+::-webkit-scrollbar-thumb
+  background: #666
+  border: none
+  border-radius: 0
+
+::-webkit-scrollbar-track
+  background: transparent
+  border: none
+  border-radius: 0
+
 @import 'common/_header'
 @import 'common/_footer'
 @import 'common/_responsive'
