--- a/_layout/_stylus/post.styl
+++ b/_layout/_stylus/post.styl
@@ -1,4 +1,3 @@
-@import 'libs/hljs-github.css'
 @import 'common/_typography'
 
 #post-content
@@ -7,7 +6,7 @@
     color: #999
 
 .post-content-body
-  padding: 7em 0 0
+  padding: 24px 0 0
 
 .post-content-header
   h2
@@ -15,35 +14,23 @@
     line-height: 2
     font-weight: $bolderWeight
 
-#post-content-footer
+.post-content-footer
   margin-top: 2em
   border-top: 1px solid #ccc
   padding: 2em 0 7em
   position: relative
-  .row-half
-      width: 45%
-      vertical-align: top
-      display: inline-block
+  justify-content: space-between
+  align-items: center
+  text-align: right
+  font-family: $SansSerifFont
+  display: flex
+  flex-flow: row nowrap
+  .next, .prev
+    display: inline-block
   .next
-      text-align: right
-      margin-right: 1em
-      float: right
-  .post-switcher
-      font-family: $SansSerifFont
-      display: block
-      h4
-          margin-top: 0
-  .prev
-      margin-left: 1em
-      float: left
-
+      text-align: left
   label
-      display: block
       font-size: 16px
-
-  .post-switcher:hover
-      .title span
-          position: relative
 
 .comments-section
   margin-top: 5em
