--- a/_layout/_pug/common/header.pug
+++ b/_layout/_pug/common/header.pug
@@ -6,6 +6,6 @@ h1.blog-logo
 
 nav#blog-header-nav
   ul.nav-list
-    li <a href="/list/1" class="nav-item hover-lighten" title="posts">Posts</a>
+    li <a href="/list" class="nav-item hover-lighten" title="posts">Posts</a>
     li <a href="/photography" class="nav-item hover-lighten" title="photography">Photography</a>
     li <a href="/about" class="nav-item hover-lighten" title="about">About</a>
