--- a/_layout/_pug/list/index.pug
+++ b/_layout/_pug/list/index.pug
@@ -12,25 +12,19 @@ block main
 	ul.posts-list
 		each post in postList
 			li.post-item
-				a.post-hd(href="/posts/#{post.title}")
-					h3.title
-						span.underline= post.title
+				.post-hd
+					a.title(href=post.url)= post.title
 					.date= post.createtime
 				.post-bd
-					.cover
-						.cover-wrapper
-							img(src=post.cover)
-							i.valign
-					.description= post.description
-					.more more >>
+					a.cover(href=post.url)
+						img(src=post.cover)
+					.description!= post.description
+					a.more(href=post.url) more >>
 
-	- var prevUrl = curPage!=1 ? "/list/"+(curPage-1) : null;
-	- var nextUrl = curPage!=totalPage ? "/list/"+(curPage+1) : null;
 	section.pagination
-		.prev.pagination-wrapper(style="float:left")
-			if prevUrl
-				a(href=prevUrl) Prev
-		.next-pagination-wrapper(style="float:right")
-			if nextUrl
-				a(href=nextUrl) Next
-
+		if prev
+			.prev
+				a(href=prev) << Prev
+		if next
+			.next
+				a(href=next) Next >>
