--- a/_layout/_stylus/list.styl
+++ b/_layout/_stylus/list.styl
@@ -1,60 +1,63 @@
-//@import "../common/_base.styl"
-
-article
-  display: block
-  margin: 0 auto
-  padding: 7em 0
-  width: 60%
-  max-width: 700px
-  ul
-    list-style-type: none
+@import 'common/_typography'
 
 .posts-list
-  .post-hd
-    color: #555
-  .post-bd
-    padding-top: 1em
-  .title
-    font-size: 1.67em
-    line-height: 1.67em
-  .date
-    color: #999
+  typo-article()
   .post-item
-    margin-bottom: 3em
-    .title span
-      position:relative
-    a:hover
-      .title span:before
-        transform: scaleX(1)
+    margin-bottom: 32px;
+    .post-hd
+      color: #555
+      .title
+        font-size: 24px
+        font-family: $SerifFont
+
   .cover
-    height: 6.67em
+    width: 100%
     overflow: hidden
     position: relative
-  .cover-wrapper
-    position: absolute
-    top: -100%
-    bottom: -100%
-    left: -50%
-    right: -50%
-    text-align: center
-    img
-      vertical-align: middle
-      max-width: 50%
-    .valign
-      height: 100%
-      width: 1px
-      display: inline-block
-      vertical-align: middle
-  .description
-    color: #555
-    margin-top: .5em
-  .post-eof
     display: block
-    margin: 4em auto 4em
-    width: 20%
-    height: 1px
-    background: #ccc
-    text-align: center
-  li:last-child
-    .post-ft
-      display: none
+    margin: 12px
+    background: transparent
+    cursor: pointer
+    transition: opacity 1s
+    &:before
+      content: ""
+      display: block
+      height: 0px
+      position: relative
+      width: 100%
+      padding-top: 30%
+      background: transparent
+      transform: none
+    &:hover:before
+      transform: none
+    img
+      display: block
+      width: 100%
+      position: absolute
+      top: 50%
+      left: 0px
+      transform: translateY(-50%)
+  .description
+    color: rgba(0,0,0,.54)
+    margin-top: .5em
+
+.pagination
+  margin-top: 2em
+  border-top: 1px solid #ccc
+  padding: 2em 0 2em
+  position: relative
+  justify-content: space-between
+  align-items: center
+  text-align: left
+  font-family: $SansSerifFont
+  display: flex
+  flex-flow: row nowrap
+  .next, .prev
+    display: inline-block
+    flex-grow: 1
+  .next
+    text-align: right
+  a
+    underline()
+    position: relative
+    font-size: 18px
