始得明時來讜論，豈知薄命墮危機。____by_丁黼

--- a/_layout/_stylus/common/_typography.styl
+++ b/_layout/_stylus/common/_typography.styl
@@ -158,6 +158,7 @@ typo-article()
     margin-left: auto
     margin-right: auto
     min-width: 60%
+    line-height: 2em
     td, th
       padding: 0 0.3em
     thead, th
