--- a/projects/textStory/index.css
+++ b/projects/textStory/index.css
@@ -1,22 +1,47 @@
 html, body {
+  -webkit-overflow-scrolling: none;
   width: 100%;
   height: 100%;
   min-width: 100%;
   min-height: 100%;
-  overflow: auto;
+  overflow: hidden;
   position: relative;
   padding: 0px;
   margin: 0px;
   font: 14px/1.231 "Microsoft Yahei", "PingFang SC", "Noto Sans CJK SC", "Droid Sans", Helvetica, "Hiragino Sans GB", sans-serif;
 }
 
+body {
+  display: flex;
+  flex-flow: column nowrap;
+}
+
 #app {
-  box-sizing: border-box;
   width: 100%;
   overflow-x: hidden;
+  overflow-y: hidden;
   background: #fff;
-  padding: 12px 16px 48px;
-  min-height: 100%;
+  padding: 0px;
+  flex-grow: 1;
+  -webkit-overflow-scrolling: touch;
+}
+
+.wrapper {
+  box-sizing: border-box;
+  width: 100%;
+  height: 100%;
+  position: static;
+  padding: 12px 16px;
+
+}
+
+.footer {
+  width: 100%;
+  height: 48px;
+  text-align: center;
+  border-top: 1px solid #ddd;
+  background: #000;
+  visibility: hidden;
 }
 
 .dialog-item {
@@ -24,9 +49,16 @@ html, body {
   margin-bottom: 12px;
   position: relative;
   text-align: left;
-  animation-name: slideInUp;
+  animation-fill-mode: forwards;
   animation-duration: 0.3s;
+  opacity: 0;
 }
+
+/*.dialog-item.show {
+  opacity: 1;
+  display: block;
+  transform: translate3d(0,0,0);
+}*/
 
 .dialog-item .name {
   font-size: 12px;
@@ -60,10 +92,11 @@ html, body {
   from {
     transform: translate3d(0, 30%, 0);
     opacity: 0;
-    visibility: visible;
+    /*visibility: visible;*/
   }
 
   to {
+    /*visibility: visible;*/
     opacity: 1;
     transform: translate3d(0, 0, 0);
   }
@@ -72,17 +105,6 @@ html, body {
 ::-webkit-scrollbar{
     width:0;
     background-color:transparent;
-}
-
-.footer {
-  position: fixed;
-  bottom: 0px;
-  width: 100%;
-  height: 48px;
-  text-align: center;
-  border-top: 1px solid #ddd;
-  background: #000;
-  visibility: hidden;
 }
 
 .download-link {
@@ -100,9 +122,10 @@ html, body {
   top: 0px;
   background: rgba(0,0,0,.2);
   z-index: 10;
-  /*transition: all .3s;*/
   opacity: 0;
   visibility: hidden;
+  animation-duration: 0.3s;
+  animation-fill-mode: forwards;
 }
 
 #modal .card {
@@ -131,6 +154,7 @@ html, body {
   font-size: 18px;
   text-align: center;
   margin-bottom: 4px;
+  color: #000 !important;
 }
 
 .app-description {
@@ -148,4 +172,28 @@ html, body {
   border-radius: 8px;
   text-decoration: none;
   display: inline-block;
+}
+
+@keyframes show {
+  from {
+    opacity: 0;
+    visibility: hidden;
+  }
+
+  to {
+    visibility: visible;
+    opacity: 1;
+  }
+}
+
+@keyframes hide {
+  from {
+    opacity: 1;
+    visibility: visible;
+  }
+
+  to {
+    opacity: 0;
+    visibility: hidden;
+  }
 }
